# bullet-hell-client

./: .gitignore  CMakeLists.txt  README.md
src/: config_constants.hpp  main.cpp
src/frame/: frame_serializer.cpp  frame_serializer.hpp  frame_template.cpp  frame_template.hpp  frame_template_enums.hpp  frame_template_structs.hpp
src/logger/: logger.cpp
src/mesh/: mesh.cpp  mesh.hpp
src/opengl_wrapper/texture/: texture2d.cpp  texture2d.hpp
src/packet_stream/: packet_stream.cpp  packet_stream.hpp
src/renderer/: renderer.hpp
src/shader/: shader.cpp  shader.hpp
src/socket/: socket.cpp  socket.hpp
src/texture/: texture2d.cpp
